[gd_scene load_steps=2 format=3 uid="uid://d3k5n6m7p8q9r"]

[ext_resource type="Script" path="res://scripts/ui/pause_menu.gd" id="1_pause"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_pause")

[node name="MenuContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="MenuContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="ButtonsPanel" type="Panel" parent="MenuContainer"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContainer/ButtonsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MenuContainer/ButtonsPanel/VBoxContainer"]
layout_mode = 2
text = "PAUSED"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="MenuContainer/ButtonsPanel/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="StatusButton" type="Button" parent="MenuContainer/ButtonsPanel/VBoxContainer"]
layout_mode = 2
text = "Status"

[node name="ItemsButton" type="Button" parent="MenuContainer/ButtonsPanel/VBoxContainer"]
layout_mode = 2
text = "Items"

[node name="QuitButton" type="Button" parent="MenuContainer/ButtonsPanel/VBoxContainer"]
layout_mode = 2
text = "Quit to Title"

[node name="StatusPanel" type="Panel" parent="MenuContainer"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContainer/StatusPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5

[node name="TitleLabel" type="Label" parent="MenuContainer/StatusPanel/VBoxContainer"]
layout_mode = 2
text = "STATUS"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MenuContainer/StatusPanel/VBoxContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="MenuContainer/StatusPanel/VBoxContainer"]
layout_mode = 2
text = "Name: Hero"

[node name="LevelLabel" type="Label" parent="MenuContainer/StatusPanel/VBoxContainer"]
layout_mode = 2
text = "Level: 1"

[node name="HPLabel" type="Label" parent="MenuContainer/StatusPanel/VBoxContainer"]
layout_mode = 2
text = "HP: 100 / 100"

[node name="MPLabel" type="Label" parent="MenuContainer/StatusPanel/VBoxContainer"]
layout_mode = 2
text = "MP: 30 / 30"

[node name="EXPLabel" type="Label" parent="MenuContainer/StatusPanel/VBoxContainer"]
layout_mode = 2
text = "EXP: 0 / 100"

[node name="GoldLabel" type="Label" parent="MenuContainer/StatusPanel/VBoxContainer"]
layout_mode = 2
text = "Gold: 50"

[node name="HSeparator2" type="HSeparator" parent="MenuContainer/StatusPanel/VBoxContainer"]
layout_mode = 2

[node name="ATKLabel" type="Label" parent="MenuContainer/StatusPanel/VBoxContainer"]
layout_mode = 2
text = "ATK: 10"

[node name="DEFLabel" type="Label" parent="MenuContainer/StatusPanel/VBoxContainer"]
layout_mode = 2
text = "DEF: 5"

[node name="ItemsPanel" type="Panel" parent="MenuContainer"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContainer/ItemsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="MenuContainer/ItemsPanel/VBoxContainer"]
layout_mode = 2
text = "ITEMS"
horizontal_alignment = 1

[node name="ItemsList" type="ItemList" parent="MenuContainer/ItemsPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="DescriptionLabel" type="Label" parent="MenuContainer/ItemsPanel/VBoxContainer"]
layout_mode = 2
text = "Select an item to see details."
autowrap_mode = 3

[node name="UseButton" type="Button" parent="MenuContainer/ItemsPanel/VBoxContainer"]
layout_mode = 2
text = "Use Item"
